Fixed service block style on small screen

--- a/styles/layout/service.styl
+++ b/styles/layout/service.styl
@@ -14,10 +14,14 @@
     font-weight 300
     @media (min-width 768px) and (max-width 1200px)
       padding 1.8rem 1.4rem
+    @media (max-width 768px)
+      font-weight 200
     & .caption
       font-size 2rem
       @media (min-width 768px) and (max-width 1200px)
         font-size 1.2rem
+      @media (max-width 768px)
+        font-size .9rem
     & i
       color #EA8A95
       font-size 7rem
